@@ -11,6 +11,7 @@ import java.util.List;
 
 /**
  * -Xms64m -Xmx64m -Xmn32m -XX:+PrintGCDetails -XX:+UseG1GC -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=C:\Users\ZhangShaowei\Desktop\dump
+ * -Xms128m -Xmx128m -Xmn64m -XX:+PrintGCDetails -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=C:\Users\Administrator\Desktop
  *
  * @author ZhangShaowei on 2019/2/25 9:40
  **/
@@ -38,8 +39,10 @@ public class TestJvmController {
         return testDead("dead");
     }
 
+    @SneakyThrows
     private String testDead(String str) {
-        return testDead(str);
+        Thread.sleep(500);
+        return str;
     }
 
 
